# cmake-project-template

./: .gitignore  CMakeLists.txt  makefile
linux-app/: CMakeLists.txt  main.cpp
main-lib-project/include/main-lib-project/: processes.hpp
main-lib-project/src/: processes.cpp
otp/: CMakeLists.txt
spherical-flame/include/spherical-flame/: processes.hpp
spherical-flame/src/: CMakeLists.txt  processes.cpp
tests/gtest/: CMakeLists.txt  test.cpp
threadx-app/: CMakeLists.txt  main.cpp
